software-center (1.1.16) UNRELEASED; urgency=low

  * data/software-center.menu.in:
    - merge "System Tools" into "Accessories"
    - rename "System Packages" to "System"
    - add "Fonts" section
    - remove all sub-sections of "System", its one big list again
   (as per spec)
  * softwarecenter/db/database.py:
    - add prefix "pkg_fuzzy"
  * add .menu term "SCPkgnameWildcard" to support wildcard based
    pkgname searches
  * softwarecenter/view/catview.py:
    - fix parsing when inline translations are available in the xml

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 02 Mar 2010 09:46:22 +0100

software-center (1.1.15) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/animatedimage.py:
    - fix crash when image property is not set
  * updated po/th.po:
    - thanks to Sira Nokyoonhtong
  * data/featured.menu.in: updated, based on 
    https://lists.ubuntu.com/archives/ubuntu-desktop/2010-March/002448.html

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - tweak default window width to restore four-column view
      in the categories screen (LP: #528082)
  * softwarecenter/view/channelpane.py:
    - make status bar text for individual channel views
      consistent with that in the "Get Software" section
      (LP: #528055)
  * softwarecenter/view/availablepane.py:
    - don't show search entry in app details view (LP: #528121)
    - fix missing status text at startup (LP: #528040) 
    - fix intermittent attribute error when searching
      from the main category screen (LP: #524209)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 01 Mar 2010 14:43:54 +0100

software-center (1.1.14) lucid; urgency=low

  * softwarecenter/view/:
    - add a bunch of missing atk description to the widgets
  * softwarecenter/view/widgets/pathbar2.py:
    - make the PathParts subclasses of atk.Objects and add atk
      descriptions/parent relations
  * debian/control:
    - add missing po4a b-d
